# caecil

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  doc.md  lex.cpp
source/: lex.cpp  lex.hpp  main.cpp  parse.cpp  parse.hpp  test.cae
